--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set up Python 3.13.0rc1
       uses: actions/setup-python@v3
       with:
-        python-version: "3.13.0rc1"
+        python-version: ""
     # - name: Install dependencies
     #   run: |
     #     python -m pip install --upgrade pip
