--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,14 @@ jobs:
         flake8 hw1 --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 hw1 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 hw2 --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 hw2 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         python hw1/pytest.py
+        python hw2/pytest.py
+      env:
+        PYTHONPATH: ${{ github.workspace }}
