--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest autopep8 pylint pyflakes
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -39,9 +39,27 @@ jobs:
         flake8 hw2 --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 hw2 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    
+    - name: Testing hw1 with pytest
       run: |
         python hw1/pytest.py
+      env:
+        PYTHONPATH: ${{ github.workspace }}
+    
+    - name: Run autopep8
+      run: |
+        autopep8 --in-place --aggressive --aggressive hw2/hw2_debugging.py hw2/rand.py
+
+    - name: Run pylint
+      run: |
+        pylint hw2/hw2_debugging.py hw2/rand.py
+
+    - name: Run pyflakes
+      run: |
+        pyflakes hw2/hw2_debugging.py hw2/rand.py
+    
+    - name: Testing hw2 with pytest
+      run: |
         python hw2/pytest.py
       env:
         PYTHONPATH: ${{ github.workspace }}
