--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -132,6 +132,5 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
-        files: |
-          ./coverage_hw2.xml
+        file: ./coverage_hw2.xml
         fail_ci_if_error: true
